--- a/src/pages/articles/my-first-article.mdx
+++ b/src/pages/articles/my-first-article.mdx
@@ -2,18 +2,31 @@ import { ArticleLayout } from '@/components/ArticleLayout'
 
 export const meta = {
   author: 'Patrick Kellar',
-  date: '2022-12-29',
+  date: '2022-12-30',
   title: 'My first article',
   description:
-    'The obligatory first article explaining why I created a blog!',
+    'Why am I starting a blog in the first place?',
 }
 
 export default (props) => <ArticleLayout meta={meta} {...props} />
 
-Obviously when you start a blog you need to write the first "why I started this blog" post. This is that post.
+From what I’ve gathered in reading other people’s blogs is that when you create a blog, you ****must**** make your first post about “why” you are creating said blog…
 
-```bash
+## So why am I doing this?
 
-echo 'whytho?'
+I’ve been listening to [Caleb Porzio’s](https://twitter.com/calebporzio) “Notes on Work” podcast more frequently recently and it’s a point that he seems to touch on often —
 
-```
+> When you are stuck on a problem, try writing about that problem. Write something that details what you are trying to do, what you have already tried, and why you *****think***** the problem is happening.
+> 
+
+ Often times, you can sort out your own issues when you write them down — the right path almost jumps out at you when you see it written down long-form.
+
+This idea resonated with me, and since I am not about to start recording myself talking about my problems out loud (not yet anyway…) I figured this would be a good alternative.
+
+## Public post-it note
+
+I used to be the type of developer that scattered post-its all over their desk with all the things I had to do in a day. I’ve iterated on that design many times over the years, but I always come back to something that resembles that pattern. My current system is a combination of Todoist and Notion — if you follow any of the “Productivity YouTuber’s” this won’t be new for you. Why am I saying this? Well initially I plan on using this platform as a way to make my digital “post-its” more visible. My hope is that with them being more visible it will help me to refine them a little better and in turn, that will help me to refine my processes.
+
+So, if any of this sounds interesting — and I know right now it’s nothing new or exciting — please follow along as I begin this blogging journey in 2023. If you have comments or questions, or just want to reach out, check out my [social links](https://patrickkellar.dev/about) or email me.
+
+Patrick ✌️
