refactor the first post

--- a/src/pages/articles/my-first-article.mdx
+++ b/src/pages/articles/my-first-article.mdx
@@ -3,30 +3,36 @@ import { ArticleLayout } from '@/components/ArticleLayout'
 export const meta = {
   author: 'Patrick Kellar',
   date: '2022-12-30',
-  title: 'My first article',
+  title: 'Welcome to my blog',
   description:
-    'Why am I starting a blog in the first place?',
+    'This blog is a place for the me to share my thoughts and experiences on topics including web development, entrepreneurship, and personal growth. Expect to see a variety of content, including technical and personal posts, both long form and shorter pieces. I plan to use this blog as a way to document my journey and reflect on my progress, as well as to share my digital "post-its". Join me on this journey...',
+  tags: [
+    'fullstack developer',
+  ],
 }
 
 export default (props) => <ArticleLayout meta={meta} {...props} />
 
-From what I’ve gathered in reading other people’s blogs is that when you create a blog, you ****must**** make your first post about “why” you are creating said blog…
+If you're reading this, you're probably wondering what this blog is all about. The short answer is that it's a place for me to share my thoughts and experiences on a variety of topics, including stuff like web development, entrepreneurship, and personal growth.
 
-## So why am I doing this?
+## So, what can you expect to see on this blog?
 
-I’ve been listening to [Caleb Porzio’s](https://twitter.com/calebporzio) “Notes on Work” podcast more frequently recently and it’s a point that he seems to touch on often —
+As I mentioned earlier, I plan to write about a variety of topics. Some posts will be more technical in nature, while others will be more personal. Some may be long and in-depth, while others may be shorter and more to-the-point.
 
-> When you are stuck on a problem, try writing about that problem. Write something that details what you are trying to do, what you have already tried, and why you *****think***** the problem is happening.
-> 
+I've been listening to Caleb Porzio's "Notes on Work" podcast more frequently recently and there is a reoccurring theme that he touches on:
 
- Often times, you can sort out your own issues when you write them down — the right path almost jumps out at you when you see it written down long-form.
+> When you are stuck on a problem, try writing about that problem. Write something that details what you are trying to do, what you have already tried, and why you think the problem is happening. Often times, you can sort out your own issues when you write them down - the right path almost jumps out at you when you see it written down long-form.
 
-This idea resonated with me, and since I am not about to start recording myself talking about my problems out loud (not yet anyway…) I figured this would be a good alternative.
+This idea resonated with me, and since I'm not about to start recording myself talking about my problems out loud (not yet, anyway), I figured this would be a good alternative.
 
 ## Public post-it note
 
-I used to be the type of developer that scattered post-its all over their desk with all the things I had to do in a day. I’ve iterated on that design many times over the years, but I always come back to something that resembles that pattern. My current system is a combination of Todoist and Notion — if you follow any of the “Productivity YouTuber’s” this won’t be new for you. Why am I saying this? Well initially I plan on using this platform as a way to make my digital “post-its” more visible. My hope is that with them being more visible it will help me to refine them a little better and in turn, that will help me to refine my processes.
+I used to be the type of developer who scattered post-its all over my desk with all the things I had to do in a day. I've iterated on that design many times over the years, but I always come back to something that resembles that pattern. My current system is a combination of Todoist and Notion - if you follow any of the "Productivity YouTubers", this won't be new for you. Why am I saying this? Well, initially, I plan on using this platform as a way to make my digital "post-its" more visible. My hope is that with them being more visible, it will help me to refine them a little better and, in turn, that will help me to refine my processes.
 
-So, if any of this sounds interesting — and I know right now it’s nothing new or exciting — please follow along as I begin this blogging journey in 2023. If you have comments or questions, or just want to reach out, check out my [social links](https://patrickkellar.dev/about) or email me.
+So, if any of this sounds interesting, I hope you'll join me on this journey and that you'll find something of value in the content I share. If you have any feedback or suggestions for future topics, I'd love to hear from you!
+
+### How to get it touch?
+
+DM me [@pjkellar](https://twitter.com/pjkellar) on Twitter or [email me](mailto:pjkellar@gmail.com)
 
 Patrick ✌️
