add description meta for lastest post

--- a/src/pages/articles/my-first-post-of-new-year.mdx
+++ b/src/pages/articles/my-first-post-of-new-year.mdx
@@ -5,7 +5,7 @@ export const meta = {
   date: '2023-01-01',
   title: '"My First Post of 2023"',
   description:
-    'This blog is a place for the me to share my thoughts and experiences on topics including web development, entrepreneurship, and personal growth. Expect to see a variety of content, including technical and personal posts, both long form and shorter pieces. I plan to use this blog as a way to document my journey and reflect on my progress, as well as to share my digital "post-its". Join me on this journey...',
+    'If you’ve picked up your phone in the last day, you have likely seen tons of posts, tweets, captions etc. resembling something like the title of this post...',
   keywords: [
     'fullstack developer, my new blog, growth, digital post-its, goals, new year, 2023',
   ],
